--- a/src/styles/AddGroupPage.css
+++ b/src/styles/AddGroupPage.css
@@ -1,48 +1,57 @@
 .add-group-container {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    margin-top: 50px;
-  }
-  
-  .add-group-form {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    margin-bottom: 20px;
-  }
-  
-  .form-label {
-    margin-bottom: 10px;
-    font-weight: bold;
-  }
-  
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  margin-top: 50px;
+}
+
+.add-group-form {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-bottom: 20px;
+}
+
+.form-label {
+  margin-bottom: 10px;
+  font-weight: bold;
+}
+
+.form-input {
+  padding: 10px;
+  width: 300px;
+  text-align: center;
+  margin-bottom: 20px;
+}
+
+.submit-buttons {
+  padding: 10px 20px;
+  width: 45%;
+  cursor: pointer;
+  color: black;
+  margin-bottom: 10px;
+}
+
+.cancel-button {
+  padding: 10px 20px;
+  cursor: pointer;
+  background-color: red;
+  color: white;
+}
+
+.success-message {
+  margin-top: 20px;
+  color: green;
+  font-weight: bold;
+}
+
+@media (max-width: 768px) {
   .form-input {
-    padding: 10px;
-    width: 300px;
-    text-align: center;
-    margin-bottom: 20px;
+    width: 100%;
   }
-  
-  .submit-buttons {
-    padding: 10px 20px;
-    width: 45%;
-    cursor: pointer;
-    color: black;
-    margin-bottom: 10px;
+
+  .submit-buttons, .cancel-button {
+    width: 100%;
   }
-  
-  .cancel-button {
-    padding: 10px 20px;
-    cursor: pointer;
-    background-color: red;
-    color: white;
-  }
-  
-  .success-message {
-    margin-top: 20px;
-    color: green;
-    font-weight: bold;
-  }
-  
+}
