--- a/src/styles/PlayerRegisterPage.css
+++ b/src/styles/PlayerRegisterPage.css
@@ -1,69 +1,102 @@
 .register-page {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    min-height: 100vh;
-  }
-  
-  .card {
-    width: 100%;
-    max-width: 500px;
-    padding: 30px;
-    border-radius: 8px;
-    background-color: #fff;
-  }
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  min-height: 100vh;
+}
 
-  .register_title{
-    color: black;
-    font-weight: bold;
-  }
-  
-  .card-body {
+.card {
+  width: 100%;
+  max-width: 500px;
+  padding: 30px;
+  border-radius: 8px;
+  background-color: #fff;
+}
+
+.register_title {
+  color: black;
+  font-weight: bold;
+}
+
+.card-body {
+  padding: 20px;
+}
+
+.form-control {
+  border-radius: 4px;
+  padding: 10px;
+  margin-bottom: 15px;
+}
+
+h2 {
+  font-size: 24px;
+  color: #333;
+}
+
+button {
+  padding: 10px;
+  font-size: 16px;
+  border-radius: 4px;
+}
+
+.btn-color:hover {
+  background-color: #0069d9;
+}
+
+.text-center {
+  margin-top: 20px;
+}
+
+.form-title {
+  font-size: 20px;
+  font-weight: bold;
+  color: #555;
+  margin-top: 5px;
+  margin-bottom: 20px;
+}
+
+.form-label {
+  font-weight: bold;
+  color: #555;
+}
+
+input[type="text"],
+input[type="email"],
+input[type="password"],
+input[type="date"] {
+  font-size: 16px;
+}
+
+@media (max-width: 768px) {
+  .card {
     padding: 20px;
   }
-  
+
   .form-control {
-    border-radius: 4px;
-    padding: 10px;
-    margin-bottom: 15px;
+    padding: 8px;
   }
-  
-  h2 {
-    font-size: 24px;
-    color: #333;
-  }
-  
+
   button {
-    padding: 10px;
-    font-size: 16px;
-    border-radius: 4px;
+    padding: 8px;
+    font-size: 14px;
   }
-  
-  .btn-color:hover {
-    background-color: #0069d9;
-  }
-  
-  .text-center {
-    margin-top: 20px;
+
+  h2 {
+    font-size: 20px;
   }
 
   .form-title {
-    font-size: 20px;
-    font-weight: bold;
-    color: #555;
-    margin-top: 5px;
-    margin-bottom: 20px;
+    font-size: 18px;
   }
-  
+
   .form-label {
-    font-weight: bold;
-    color: #555;
+    font-size: 14px;
   }
-  
+
   input[type="text"],
   input[type="email"],
   input[type="password"],
   input[type="date"] {
-    font-size: 16px;
+    font-size: 14px;
   }
-  
+}
