--- a/src/styles/TrainingHoursPage.css
+++ b/src/styles/TrainingHoursPage.css
@@ -1,56 +1,71 @@
 body{
-    background-color: #f6f6f6 !important;
-    overflow: auto;
+  background-color: #f6f6f6 !important;
+  overflow: auto;
 }
 
 .training-hours-page {
-    background-color: #f6f6f6; 
-    color: black;
-    text-align: center;
-    padding: 40px;
-    border-radius: 8px;
-    max-width: 600px;
-    margin: 130px auto;
-  }
-  
-  h1 {
-    padding-top: 5px;
-    font-size: 2em;
-    margin-bottom: 20px;
-    color: black!important;
-  }
-  
-  h2 {
-    font-size: 1.8em;
-    margin-top: 20px;
-    color: black!important;
-  }
-  
-  h3 {
-    font-size: 1.5em;
-    margin-top: 30px;
-    color: black!important;
-  }
-  
-  .training-hours-list {
-    list-style-type: none;
-    padding: 0;
-    margin: 0;
-  }
-  
-  .training-hours-item {
-    font-size: 1.4em;
-    margin-bottom: 15px;
-    color: black;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    padding-top: 10px;
-    font-weight: bold;
-  }
-  
-  .training-hours-item span {
-    margin-right: 15px;
+  background-color: #f6f6f6; 
+  color: black;
+  text-align: center;
+  padding: 40px;
+  border-radius: 8px;
+  max-width: 600px;
+  margin: 130px auto;
+}
+
+h1 {
+  padding-top: 5px;
+  font-size: 2em;
+  margin-bottom: 20px;
+  color: black!important;
+}
+
+h2 {
+  font-size: 1.8em;
+  margin-top: 20px;
+  color: black!important;
+}
+
+h3 {
+  font-size: 1.5em;
+  margin-top: 30px;
+  color: black!important;
+}
+
+.training-hours-list {
+  list-style-type: none;
+  padding: 0;
+  margin: 0;
+}
+
+.training-hours-item {
+  font-size: 1.4em;
+  margin-bottom: 15px;
+  color: black;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding-top: 10px;
+  font-weight: bold;
+}
+
+.training-hours-item span {
+  margin-right: 15px;
+}
+
+@media (max-width: 768px) {
+  .training-hours-page {
+    padding: 20px;
+    margin: 10px auto;
   }
 
- 
+  .training-hours-item {
+    font-size: 1.2em;
+    flex-direction: column;
+    align-items: flex-start;
+  }
+
+  .training-hours-item span {
+    margin-right: 0;
+  }
+}
