--- a/src/styles/playerAuthPage.css
+++ b/src/styles/playerAuthPage.css
@@ -1,4 +1,12 @@
 .auth-page{
     margin-left: 418px;
     margin-top: 40px;
-}
+  }
+  
+  @media (max-width: 768px) {
+    .auth-page {
+      margin-left: 0;
+      margin-top: 20px;
+      padding: 10px;
+    }
+  }
