--- a/src/styles/GroupsPage.css
+++ b/src/styles/GroupsPage.css
@@ -3,7 +3,7 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  height: 90vh;
+  min-height: 90vh;
   color: black;
   text-align: center;
   background-color: #f6f6f6;
@@ -23,36 +23,73 @@
   margin-bottom: 30px;
 }
 
+.add-group-button {
+  padding: 10px 20px;
+  font-size: 1.2rem;
+  margin-bottom: 20px;
+  cursor: pointer;
+  background-color: #007bff;
+  color: white;
+  border: none;
+  border-radius: 5px;
+  transition: background-color 0.3s ease;
+}
+
+.add-group-button:hover {
+  background-color: #0056b3;
+}
+
 .groups-list {
   list-style-type: none;
   padding: 0;
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-evenly;
+  justify-content: center;
   width: 100%;
 }
 
 .group-item {
-  font-size: 2.5rem;
+  font-size: 1.5rem;
   padding: 10px;
   color: black;
   border-radius: 5px;
   cursor: pointer;
-  text-align: center;
-  margin: 5px;
-  background-color: transparent;
+  text-align: left;
+  margin: 10px;
+  background-color: #e9ecef;
   transition: background-color 0.4s ease;
-  flex: 1 1 18%;
+  flex: 1 1 calc(25% - 20px);
   box-sizing: border-box;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.group-item span {
+  flex: 1;
+  text-align: left;
+  margin-right: 10px;
+}
+
+.edit-buttons {
+  background-color: transparent;
+  border: none;
+  cursor: pointer;
+  font-size: 1.5rem;
 }
 
 .group-item:hover {
-  color: #b8b6b6;
+  background-color: #d6d8db;
+}
+
+@media (max-width: 1024px) {
+  .group-item {
+    flex: 1 1 calc(33.333% - 20px);
+  }
 }
 
 @media (max-width: 768px) {
   .groups-page {
-    height: auto;
     padding: 20px;
   }
 
@@ -65,7 +102,18 @@
   }
 
   .group-item {
-    font-size: 1.5rem;
-    flex: 1 1 45%;
+    font-size: 1.2rem;
+    flex: 1 1 calc(50% - 20px);
+  }
+
+  .edit-buttons {
+    margin-left: 10px;
+    margin-top: 0;
+  }
+}
+
+@media (max-width: 480px) {
+  .group-item {
+    flex: 1 1 100%;
   }
 }
