Api ile bağlantı kuruldu

--- a/src/styles/GroupsPage.css
+++ b/src/styles/GroupsPage.css
@@ -82,6 +82,28 @@
   background-color: #d6d8db;
 }
 
+.all-players-button-container {
+  display: flex;
+  justify-content: center;
+  margin-top: 40px;
+}
+
+.all-players-button {
+  background-color: #1f8ef1;
+  color: white;
+  padding: 12px 24px;
+  font-size: 18px;
+  border: none;
+  border-radius: 10px;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+}
+
+.all-players-button:hover {
+  background-color: #0d6efd;
+}
+
+
 @media (max-width: 1024px) {
   .group-item {
     flex: 1 1 calc(33.333% - 20px);
