--- a/src/styles/playerAuthPage.css
+++ b/src/styles/playerAuthPage.css
@@ -1,12 +1,17 @@
-.auth-page{
-    margin-left: 418px;
-    margin-top: 40px;
+.auth-page {
+  margin: 0 auto;
+  margin-top: 20px;
+  max-width: 500px;
+  padding: 20px;
+  background-color: #fff;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.5);
+  border-radius: 8px;
+}
+
+@media (max-width: 768px) {
+  .auth-page {
+    margin-top: 20px;
+    padding: 10px;
+    max-width: 90%;
   }
-  
-  @media (max-width: 768px) {
-    .auth-page {
-      margin-left: 0;
-      margin-top: 20px;
-      padding: 10px;
-    }
-  }
+}
