--- a/src/styles/EditGroupPage.css
+++ b/src/styles/EditGroupPage.css
@@ -1,30 +1,78 @@
 .edit-group-container {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  margin-top: 150px;
-}
-
-.editGroupInput{
-  padding: 10px;
-  width: 300px;
+  max-width: 400px;
+  margin: 195px auto;
+  padding: 20px;
+  background-color: #ffffff; /* Daha belirgin bir beyaz arka plan */
+  border: 2px solid #ddd; /* Kutunun kenarlarını belirginleştirmek için border eklendi */
+  border-radius: 10px;
+  box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2); /* Daha yoğun bir gölge */
   text-align: center;
 }
 
-.button-container {
-  display: flex;
+.editGroupInput {
+  width: 100%;
+  padding: 10px;
   margin-bottom: 20px;
-  margin-top: 40px;
+  border: 1px solid #ccc; /* Daha belirgin bir kenar */
+  border-radius: 5px;
+  font-size: 16px;
 }
 
-.delete-button {
-  background-color: red;
-  color: white;
+.checkbox-container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-bottom: 20px;
+}
+
+.checkbox-container label {
+  margin-right: 10px;
+  font-size: 16px;
+}
+
+
+button {
+  padding: 10px 15px;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  font-size: 16px;
+  transition: transform 0.2s ease, box-shadow 0.2s ease;
 }
 
 button:hover {
-  opacity: 0.9;
+  transform: scale(1.05); /* Hover sırasında buton biraz büyür */
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2); /* Hover sırasında gölge eklenir */
+}
+
+.delete-button {
+  background-color: #dc3545;
+  color: white;
+}
+
+.delete-button:hover {
+  background-color: #c82333;
+}
+
+.success-message {
+  margin-top: 20px;
+  color: green;
+  font-size: 16px;
+}
+
+@media (max-width: 768px) {
+  .edit-group-container {
+    margin-top: 50px;
+  }
+
+  .editGroupInput {
+    width: 100%;
+  }
+
+  .button-container {
+    flex-direction: column;
+    align-items: center;
+  }
 }
 
 @media (max-width: 768px) {
